Schema: Suppress empty "enum" arrays
...by making the enum list optional. Follow-up to #1418, which removed resource-specific object mappers.